--- a/sitee/index.html
+++ b/sitee/index.html
@@ -11,12 +11,13 @@
             <div class="container0">
                 <div>
                     <h3>Portfolio</h3>
+                    <button>
                     <a href="contact.html" class="button">irufhei</a> 
+                    </button>
                     <button href="https://www.google.ru/">test</button>
                     <button class="button" id="changeButton">Theme</button>
                 </div>
             </div>
-            <
         </header>
         <main>
             <div class="container1">
