--- a/sitee/contact.html
+++ b/sitee/contact.html
@@ -10,8 +10,10 @@
         <header>
             <div class="container0">
                 <div>
-                    <h3>Contact</h3>
-                    <a href="index.html" class="button">irufhei</a>
+                    <h3>Contact</h3>  
+                    <button> 
+                    <a href="contact.html" class="button">irufhei</a>
+                    </button>  
                     <button class="button" id="changeButton">Theme</button>
                 </div>
             </div>
