--- a/sitee/contact.html
+++ b/sitee/contact.html
@@ -12,7 +12,7 @@
                 <div>
                     <h3>Contact</h3>  
                     <button> 
-                    <a href="contact.html" class="button">irufhei</a>
+                    <a href="index.html" class="button">irufhei</a>
                     </button>  
                     <button class="button" id="changeButton">Theme</button>
                 </div>
