--- a/sitee/index.html
+++ b/sitee/index.html
@@ -22,7 +22,7 @@
         </header>
         <main>
             <div class="container1">
-                <h1 id="title">Это главgная страничка сайhта</h1>
+                <h1 id="title">Это главная страничка сайhта</h1>
             </div>
         </main>
         <script src="script.js"></script>
